Replace Arrays.asList by List.of